<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#009688"
    tools:context=".EventForm">

    <include
        android:id="@+id/monthlyToolBar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthlyToolBar">

        <EditText
            android:id="@+id/in_title"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="#009688"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom|center_horizontal"
            android:hint="@string/enterTitle"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#D2D8D8"
            android:textCursorDrawable="@color/colorCalendarDayBackground"
            android:textSize="25sp"
            android:typeface="normal" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">

            <TextView
                android:id="@+id/in_date"
                android:layout_width="226dp"
                android:layout_height="85dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:hint="@string/date"
                android:importantForAutofill="no"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="150dp"
                android:layout_height="85dp"
                android:backgroundTintMode="screen"
                android:fontFamily="sans-serif-light"
                android:text="@string/select_date" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/in_time"
                android:layout_width="226dp"
                android:layout_height="85dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:hint="@string/time"
                android:importantForAutofill="no"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="150dp"
                android:layout_height="85dp"
                android:backgroundTintMode="screen"
                android:fontFamily="sans-serif-light"
                android:text="@string/select_time" />
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="355dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:backgroundTintMode="screen"
            android:fontFamily="sans-serif-light"
            android:text="@string/save">
        </Button>

        <Button
            android:id="@+id/eventListButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:backgroundTintMode="screen"
            android:fontFamily="sans-serif-light"
            android:text="@string/eventList"
            android:theme="@style/AppTheme.NoActionBar">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>