<resources>

    <!-- "For Weekly stuff -->
    <string name="app_name">Calendar</string>
    <string name="title_activity_view_weekly">Weekly</string>
    <string name="textEvent">Add Events</string>
    <string name="textWeek">Weekly</string>

    <!--"For AppBar" -->
    <string name="to_monthly">Monthly</string>
    <string name="to_weekly">Weekly</string>
    <string name="to_3weekly">Three Day</string>
    <string name="to_daily">Daily</string>
    <string name="to_yearly">Yearly</string>
    <string name="to_event">Events</string>

    <!--"For eventForm -->
    <string name="eventFormTitle">Event</string>
    <string name="title">Title </string>
    <string name="enterTitle">Title</string>
    <string name="startTime">Start Time</string>
    <string name="enterStartTime">Enter start time</string>
    <string name="endTime">End Time</string>
    <string name="enterEndTime">Enter end time</string>
    <string name="save">Save</string>
    <string name="eventList">Event List</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="time">Time</string>
    <string name="select_time">SELECT TIME</string>
    <string name="select_date">SELECT DATE</string>
    <string name="date">Date</string>
    <string name="return_to_home">Return to Home</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
</resources>
