<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.calendar.EventActivity">

    <include
        android:id="@+id/monthlyToolBar"
        layout="@layout/toolbar">
    </include>

    <LinearLayout
        android:layout_width="416dp"
        android:layout_height="611dp"
        android:background="#009688"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthlyToolBar">

        <ListView
            android:id="@+id/main_listview"
            android:layout_width="416dp"
            android:layout_height="wrap_content"
            android:background="#009688" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>