<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:adroid="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#009688">

    <include layout="@layout/toolbar"
        android:id="@+id/monthlyToolBar"></include>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/monthlyToolBar"
        android:firstDayOfWeek="1"
        android:layout_marginTop="0dp"
        android:background="#D7FFFFFF"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity= "center_horizontal"
        >

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/buttonEvent"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:layout_margin="25dp"
            android:background="#FFFFFF"
            android:text="@string/textEvent" />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/buttonWeek"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:layout_margin="25dp"
            android:background="#FFFFFF"
            android:text="@string/textWeek" />
    </LinearLayout>

</LinearLayout>
